# cs1302-sphinx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  babel.config.js  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
docs/: Makefile  conf.py  index.rst
scripts/: webpack_hook.py
src/cs1302_sphinx/: __init__.py
src/cs1302_sphinx/assets/scripts/: cs1302_base.ts
src/cs1302_sphinx/assets/styles/: _icons.scss  cs1302_base.scss
src/cs1302_sphinx/theme/cs1302_base/: base.html  theme.toml
