[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs1302-sphinx"
version = "0.1.0"
description = "A collection of custom Sphinx extensions and themes used by cs1302uga."
readme = "README.rst"
maintainers = [
    { name = "Michael E. Cotterell", email = "mepcott@uga.edu" },
    { name = "Bradley J. Barnes", email = "bjb211@uga.edu" },
]
authors = [
    { name = "Michael E. Cotterell", email = "mepcott@uga.edu" },
    { name = "Bradley J. Barnes", email = "bjb211@uga.edu" },
]
requires-python = ">=3.13"
dependencies = [
    "accessible-pygments>=0.0.5",
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "sphinx >= 7.0,<9.0",
]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Domain",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Theme",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Documentation",
    "Topic :: Education",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Text Processing :: Markup",
]
keywords = [
    "sphinx",
    "extension",
    "theme",
    "domain",
    "design",
]

[project.urls]
Homepage = "https://cs1302uga.github.io/cs1302-sphinx/"

[dependency-groups]
dev = [
    "pre-commit~=4.2",
]

[project.entry-points]
"sphinx.html_themes" = { cs1302_base = "cs1302_sphinx" }

[tool.hatch.build.hooks.custom]
path = "scripts/webpack_hook.py"

[tool.hatch.build]
artifacts = [
    "src/cs1302_sphinx/theme/cs1302_base/static/**/*",
]
